# CollectThemAll

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default-desktop.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mapgenie.rs  mod.rs  userdata.rs
src-tauri/src/commands/mapgenie/: cache.rs  http.rs  mod.rs  models.rs  parsing.rs  scraping.rs  sprites.rs  tile_config.rs
src-tauri/src/db/: mod.rs  schema.rs  tiles.rs  userdata.rs
src/components/: AddMarkerDialog.svelte  Background.svelte  BulkDownloadBar.svelte  CategoryFilters.svelte  GameLibrary.svelte  GameMapView.svelte  MapSwitcher.svelte  OfflineDownloadPanel.svelte  ProgressPanel.svelte  SearchBar.svelte
src/lib/: bulkDownload.ts  platform.ts
src/lib/api/: assets.ts  customMarkers.ts  games.ts  mapgenie.ts  tiles.ts
src/lib/map/: geojson.ts  markdown.ts  popup.ts  tileUrl.ts
src/lib/stores/: foundMarkers.ts
src/lib/types/: game.ts  mapgenie.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/game/[id]/: +page.svelte
src/routes/overlay/: +page.svelte
static/: icon.icns
