[package]
name = "cta-collectthemall"
version = "1.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cta_collectthemall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# rustls instead of the default native-tls: native-tls links the platform's
# OpenSSL, which has no cross-compile path to Android (openssl-sys fails to
# build for aarch64-linux-android). rustls is pure Rust and builds identically
# on desktop and mobile. Bundled webpki-roots mean we trust the standard CA set
# the same way everywhere rather than depending on each OS's cert store layout —
# fine here since we only talk to a public HTTPS API (mapgenie.io).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# bundled compiles SQLite from source, matching the rustls "pure build everywhere" approach:
# no system libsqlite dependency, so Android/iOS cross-compile identically to desktop.
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
